Fix textarea overlapping username on comments

--- a/app/styles/layout/_feeds.scss
+++ b/app/styles/layout/_feeds.scss
@@ -350,6 +350,10 @@
       p:first-child + .onebox {
         margin-top: 2rem;
       }
+      textarea {
+        display: inline-block;
+        margin-top: 1rem;
+      }
     }
   }
   .stream-item-activity {
